# vision_asst

./: .gitignore  ASSISTANT.md  DESIGN.md  ESP32.md  README.md  build.gradle.kts  default.env  pyproject.toml  run.gradio.sh  run.sh  server.py  settings.gradle.kts
gradle/: libs.versions.toml
res/: index.html  manifest.json
res/css/: style.css
res/js/: app.js  pcm-worklet.js
src/androidMain/: AndroidManifest.xml
src/androidMain/kotlin/io/github/brew/visionassist/: MainActivity.kt  Platform.android.kt  WebViewConsole.android.kt
src/androidMain/res/values/: strings.xml
src/commonMain/kotlin/io/github/brew/visionassist/: App.kt  Greeting.kt  GreetingUtil.kt  LocalWebServer.kt  Platform.kt  WebViewConsole.kt
src/jvmMain/kotlin/io/github/brew/visionassist/: Platform.jvm.kt  WebViewConsole.jvm.kt  main.kt
src/test/: conftest.py  test_audio.py  test_protocol.py  test_session.py  test_vad.py  test_video.py
src/vision_asst/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  server.py
src/vision_asst/engine/: __init__.py  omni_engine.py  prompt.py
src/vision_asst/routes/: http.py  ws.py
src/vision_asst/streaming/: __init__.py  audio.py  protocol.py  session.py  vad.py  video.py
src/vision_client/: vision_client.ino  web_client.py  ws_client.py
