[project]
name = "vision-asst"
version = "0.1.0"
description = "Vision Assistant for Visually-impaired People"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "vllm>=0.20.1; sys_platform == 'linux'",
    "vllm-omni[demo]>=0.20.0; sys_platform == 'linux'",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    "pillow>=10.4.0",
    "webrtcvad>=2.0.10",
    "hf-transfer>=0.1.9",
    "google-genai>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "soundfile>=0.12.0",
]

[project.scripts]
vision-asst = "vision_asst.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_asst"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
]
ignore = [
    "E501",         # line length is enforced by formatter
    "B008",         # FastAPI Depends() default
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
